# appcleaner

./: .gitignore  LICENSE  README.md  README.tr.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: make-fixture.mjs  make-icons.mjs
src/: App.tsx  backend.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: deleter.rs  desktop.rs  leftovers.rs  lib.rs  main.rs
src-tauri/tests/: flow.rs
