[package]
name = "appcleaner"
version = "0.1.0"
description = "Kaldırılan Linux uygulamalarının artık dosyalarını bulup temizler"
edition = "2021"

[lib]
name = "appcleaner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"
dirs = "6"
